--- a/flaskr/templates/courseinfo.html
+++ b/flaskr/templates/courseinfo.html
@@ -39,63 +39,52 @@
         <div class="col-1"></div>
     </div>
 
-    <!-- import -->
-    <!-- Course Quota -->
-    <div class="row">
+    <!-- Course TA info & history -->
+    <div class="row" style="height:auto">
         <div class="col-1"></div>
         <div class="col-10">
-            <h2>Import Course Quota. Please upload a .csv file.</h2>
-        </div>
-        <div class="col-1"></div>
-    </div>
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="col-10">
-            <form method="POST" enctype="multipart/form-data">
-                <input type="file" name="fileUploadCQ" />
-                <input type="submit" name="submit" value="Upload Course Quota" />
-                <div id="dvCSV"></div>
+            <h2>Course TA Information</h2>
+            <!-- input tid -->
+            <form method="POST">
+                <table class="intbl">
+                    <tr>
+                        <td> Course (e.g. COMP307): </td>
+                        <td colspan="2"><input type="text" name="coursenum"></td>
+                        <td><input type="submit" name="submit" value="Search Course"></td>
+                    </tr>
+                </table>
             </form>
         </div>
         <div class="col-1"></div>
     </div>
 
-    <!-- TA Cohort -->
-    <div class="row">
+    <!-- search results -->
+    <div class="row" style="height:auto">
         <div class="col-1"></div>
         <div class="col-10">
-            <h2>Import TA Cohort. Please upload a .csv file.</h2>
-        </div>
-        <div class="col-1"></div>
-    </div>
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="col-10">
-            <form method="POST" enctype="multipart/form-data">
-                <input type="file" name="fileUploadC" />
-                <input type="submit" name="submit" value="Upload TA Cohort" />
-                <div id="dvCSV"></div>
-            </form>
-        </div>
-        <div class="col-1"></div>
-    </div>
-
-    <!-- error and success messages -->
-    <div class="row">
-        <div class="col-1"></div>
-        <div class="col-10">
-            {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            <div class=flashes>
-                {% for category, message in messages %}
-                <p class="{{ category }}">{{ message }}</p>
+            <!-- Course TA Info -->
+            {% if disp == True %}
+            <h4>TA Information for {{ course }} </h4>
+            <table id="updatetable">
+                <tr>
+                    <th> Term </th>
+                    <th> TA Student ID </th>
+                    <th> TA Name </th>
+                </tr>
+                {% for row in tas %}
+                <tr>
+                    <td> {{ row[0] }}</td>
+                    <td> {{ row[1] }}</td>
+                    <td> {{ row[2] }}</td>
+                </tr>
                 {% endfor %}
-            </div>
+            </table>
             {% endif %}
-            {% endwith %}
         </div>
+        <div class="col-1"></div>
     </div>
 
+    <br><br><br><br><br><br>
 
     <!-- footer -->
     <div class="row footer">
@@ -114,11 +103,5 @@
         <div class="col-1"></div>
     </div>
 </body>
-
-<script>
-    function dispfilename() {
-        
-    }
-</script>
 
 </html>
