--- a/flaskr/templates/update.html
+++ b/flaskr/templates/update.html
@@ -23,12 +23,20 @@
     <div class="row" style="background:#b2e1d4; height:auto">
         <div class="col-1"></div>
         <div class="col-10" style="align-items:center; padding: 10px;">
-            <a href="{{ url_for('admin.info') }}"><font size="4"><b>TA/COURSE INFO<b>&emsp;&emsp;</b></font></a>
-            <a href="{{ url_for('admin.update') }}"><font size="4"><b>UPDATE TA INFO&emsp;&emsp;</b></font></a>
+            <a href="{{ url_for('admin.info') }}">
+                <font size="4"><b>TA INFO<b>&emsp;&emsp;</b></font>
+            </a>
+            <a href="{{ url_for('admin.courseinfo') }}">
+                <font size="4"><b>COURSE INFO<b>&emsp;&emsp;</b></font>
+            </a>
+            <a href="{{ url_for('admin.update') }}">
+                <font size="4"><b>UPDATE TA INFO&emsp;&emsp;</b></font>
+            </a>
             <a href="{{ url_for('admin.adminimport') }}">
                 <font size="4"><b>IMPORT&emsp;&emsp;</b></font>
             </a>
         </div>
+        <div class="col-1"></div>
     </div>
 
     <!-- title -->
@@ -69,7 +77,7 @@
         <div class="col-1"></div>
         <div class="col-10">
             {% if disp == 2 %}
-                <h4 style="margin: 2px;"> Term: {{ term }} &nbsp;&nbsp;&nbsp; Course: {{ course }}</h4>
+            <h4 style="margin: 2px;"> Term: {{ term }} &nbsp;&nbsp;&nbsp; Course: {{ course }}</h4>
             {% endif %}
             <table id="updatetable" style="display: none;">
                 <tr>
@@ -187,7 +195,6 @@
                 document.getElementById('norec').style.display = "block";
             }
         }
-
     </script>
 
 
