--- a/flaskr/templates/update.html
+++ b/flaskr/templates/update.html
@@ -44,7 +44,6 @@
         <div class="col-1"></div>
         <div class="col-10">
             <h2>Update TA Information for a Course</h2>
-            <p>Current TA Information</p>
         </div>
         <div class="col-1"></div>
     </div>
@@ -54,6 +53,7 @@
         <div class="col-1"></div>
         <div class="col-10">
             <!-- input term_month_year & course_num -->
+            <h4 style="margin: 5px;">Current TA Information</h4>
             <form method="POST">
                 <table class="intbl">
                     <tr>
@@ -77,7 +77,15 @@
         <div class="col-1"></div>
         <div class="col-10">
             {% if disp == 2 %}
-            <h4 style="margin: 2px;"> Term: {{ term }} &nbsp;&nbsp;&nbsp; Course: {{ course }}</h4>
+            <table id="titletbl">
+                <tr>
+                    <th>Term: {{ term }} </th>
+                    <th>Course: {{ course }} </th>
+                    <th>TA Quota: {{ taquota }} </th>
+                    <th>Current Number of TA: {{ curta }}</th>
+                    <th>Filled Rate: {{ fillrate }} </th>
+                </tr>
+            </table>
             {% endif %}
             <table id="updatetable" style="display: none;">
                 <tr>
@@ -104,7 +112,7 @@
     <div class="row" id="addta" style="height:auto; display: block;">
         <div class="col-1"></div>
         <div class="col-10">
-            <h4>Add a TA to the Course</h4>
+            <h4 style="margin: 5px;">Add a TA to the Course</h4>
             <form method="POST">
                 <table class="intbl">
                     <tr>
@@ -130,7 +138,7 @@
     <div class="row" id="removeta" style="height:auto; display: block;">
         <div class="col-1"></div>
         <div class="col-10">
-            <h4>Remove a TA from the Course</h4>
+            <h4 style="margin: 5px;">Remove a TA from the Course</h4>
             <form method="POST">
                 <table class="intbl">
                     <tr>
@@ -145,6 +153,34 @@
                     <td> TA Student ID (e.g. 260000000): </td>
                     <td colspan="2"><input type="text" name="tid"></td>
                     <td><input type="submit" name="submit" value="remove"></td>
+                    </tr>
+                </table>
+            </form>
+        </div>
+        <div class="col-1"></div>
+    </div>
+
+
+    <!-- update hours -->
+    <div class="row" id="updatehrs" style="height:auto; display: block;">
+        <div class="col-1"></div>
+        <div class="col-10">
+            <h4 style="margin: 5px;"> Update Hours for a TA</h4>
+            <form method="POST">
+                <table class="intbl">
+                    <tr>
+                    <tr>
+                        <td> Term (e.g. Winter2022): </td>
+                        <td colspan="2"><input type="text" name="term_month_year"></td>
+                    </tr>
+                    <tr>
+                        <td> TA Student ID (e.g. 260000000): </td>
+                        <td colspan="2"><input type="text" name="tid"></td>
+                    </tr>
+                    <tr>
+                        <td> Hours (90/180): </td>
+                        <td colspan="2"><input type="text" name="hours"></td>
+                        <td><input type="submit" name="submit" value="update"></td>
                     </tr>
                 </table>
             </form>
