--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -3,12 +3,12 @@
 }
 
 .row::after {
-  content: '';
+  content: "";
   clear: both;
   display: table;
 }
 
-[class*='col-'] {
+[class*="col-"] {
   float: left;
   padding: 10px;
 }
@@ -19,104 +19,110 @@ html {
 
 a {
   color: black;
-  text-decoration: none;
+  text-decoration:none;
 }
 
-a:hover {
+a:hover{
   cursor: pointer;
 }
 
-.page {
-  display: none;
-}
-.page.active {
-  display: block;
-}
-
-.footer {
+.footer{
+  margin-top: 50px;
   background-color: #579a88;
-  position: fixed;
-  bottom: 0;
-  height: auto;
+  position: fixed; 
+  bottom: 0; 
+  height: auto; 
   width: 99%;
 }
+/* .empty {
+  color : white;
+}
+.active {
+  color : red;
+} */
 
-@media only screen and (min-device-width: 480px) {
-  /* For desktop: */
-  .col-1 {
-    width: 8.33%;
-  }
-  .col-2 {
-    width: 16.66%;
-  }
-  .col-3 {
-    width: 25%;
-  }
-  .col-4 {
-    width: 33.33%;
-  }
-  .col-5 {
-    width: 41.66%;
-  }
-  .col-6 {
-    width: 50%;
-  }
-  .col-7 {
-    width: 58.33%;
-  }
-  .col-8 {
-    width: 66.66%;
-  }
-  .col-9 {
-    width: 75%;
-  }
-  .col-10 {
-    width: 83.33%;
-  }
-  .col-11 {
-    width: 91.66%;
-  }
-  .col-12 {
-    width: 100%;
-  }
+@media only screen and (min-width: 916px) {
+  /* For large page: */
+  .col-1 {width: 8.33%;}
+  .col-2 {width: 16.66%;}
+  .col-3 {width: 25%;}
+  .col-4 {width: 33.33%;}
+  .col-5 {width: 41.66%;}
+  .col-6 {width: 50%;}
+  .col-7 {width: 58.33%;}
+  .col-8 {width: 66.66%;}
+  .col-9 {width: 75%;}
+  .col-10 {width: 83.33%;}
+  .col-11 {width: 91.66%;}
+  .col-12 {width: 100%;}
+  .hidden-large {display: none;}
+}
+@media only screen and (max-width: 916px) {
+  /* For small page: */
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+  .hidden-small {display: none;}
 }
 
 /* info */
-.infotbl th{
+.infotbl {
+  border-collapse: collapse;
+}
+
+.infotbl th, td {
+  padding-right: 15px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.infotbl th {
   text-align: left;
   padding: 2px;
 }
 
-.infotbl td{
+.infotbl td {
   font-weight: normal;
 }
 
-
 /* update */
-.intbl {
-  border: 0;
+.intbl th, td {
+  border: none;
   font-weight: normal;
+}
+
+#titletbl th {
+  padding-right: 15px;
+  padding-bottom: 5px;
 }
 
 #updatetable {
     border-collapse: collapse;
-    width: 100%;
-  }
+}
   
-  #updatetable td, #updatetable th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  #updatetable tr:nth-child(1){
-    background-color: rgb(217, 217, 217) !important;
-  }
+#updatetable td, #updatetable th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
 
-  #updatetable tr:nth-child(odd){background-color: #f2f2f2;}
-    
-  #updatetable th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    font-weight: normal;
-  }
+#updatetable tr:nth-child(1){
+  background-color: rgb(217, 217, 217) !important;
+}
+
+#updatetable tr:nth-child(odd){background-color: #f2f2f2;}
+  
+#updatetable td {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  font-weight: normal;
+}
