--- a/flaskr/templates/courseinfo.html
+++ b/flaskr/templates/courseinfo.html
@@ -48,6 +48,10 @@
             <form method="POST">
                 <table class="intbl">
                     <tr>
+                        <td> Term (e.g. Winter2022): </td>
+                        <td colspan="2"><input type="text" name="term_month_year"></td>
+                    </tr>
+                    <tr>
                         <td> Course (e.g. COMP307): </td>
                         <td colspan="2"><input type="text" name="coursenum"></td>
                         <td><input type="submit" name="submit" value="Search Course"></td>
@@ -64,10 +68,16 @@
         <div class="col-10">
             <!-- Course TA Info -->
             {% if disp == True %}
-            <h4>TA Information for {{ course }} </h4>
+            <h4 style="margin: 5px;">TA Information for {{ course }} {{ term }}</h4>
+            <table id="titletbl">
+                <tr>
+                    <th>TA Quota: {{ taquota }} </th>
+                    <th>Current Number of TA: {{ curta }}</th>
+                    <th>Filled Rate: {{ fillrate }} </th>
+                </tr>
+            </table>
             <table id="updatetable">
                 <tr>
-                    <th> Term </th>
                     <th> TA Student ID </th>
                     <th> TA Name </th>
                 </tr>
@@ -75,7 +85,6 @@
                 <tr>
                     <td> {{ row[0] }}</td>
                     <td> {{ row[1] }}</td>
-                    <td> {{ row[2] }}</td>
                 </tr>
                 {% endfor %}
             </table>
@@ -84,7 +93,23 @@
         <div class="col-1"></div>
     </div>
 
-    <br><br><br><br><br><br>
+     <!-- error and success messages -->
+     <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <div class=flashes>
+                {% for category, message in messages %}
+                <p class="{{ category }}">{{ message }}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
+            {% endwith %}
+        </div>
+    </div>
+    <br><br><br><br>
+
 
     <!-- footer -->
     <div class="row footer">
