--- a/flaskr/templates/info.html
+++ b/flaskr/templates/info.html
@@ -27,7 +27,7 @@
                 <font size="4"><b>TA INFO<b>&emsp;&emsp;</b></font>
             </a>
             <a href="{{ url_for('admin.courseinfo') }}">
-                <font size="4"><b>COURSE INFO<b>&emsp;&emsp;</b></font>
+                <font size="4"><b>COURSE TA INFO<b>&emsp;&emsp;</b></font>
             </a>
             <a href="{{ url_for('admin.update') }}">
                 <font size="4"><b>UPDATE TA INFO&emsp;&emsp;</b></font>
@@ -65,7 +65,7 @@
             <!-- TA Cohort Info -->
             {% for row in cohort %}
             <h4 style="margin: 5px;">TA Information for {{ row[0] }}</h4>
-            <table class="infotbl">
+            <table class="cohortinfotbl">
                 <tr>
                     <th> TA Name: </th>
                     <td> {{ row[1] }}</td>
@@ -195,6 +195,7 @@
                 <tr>
                     <th> Term </th>
                     <th> Course </th>
+                    <th> Instructor </th>
                     <th> Comments </th>
                 </tr>
                 {% for row in log %}
@@ -202,6 +203,7 @@
                     <td> {{ row[0] }} </td>
                     <td> {{ row[1] }} </td>
                     <td> {{ row[2] }} </td>
+                    <td> {{ row[3] }} </td>
                 </tr>
                 {% endfor %}
             </table>
@@ -262,7 +264,9 @@
     <div class="row footer">
         <div class="col-1"></div>
         <div class="col-7" style="padding-top: 15px;">
-            <a><b>Back to Dashboard</b></a>
+            <a href="{{ url_for('admin.dashboard') }}">
+                <font size="4"><b>Back to Dashboard<b>&emsp;&emsp;</b></font>
+            </a>
         </div>
         <div class="col-3" style="align-items: center; padding: 10px;">
             <font color="#b2e1d4" size="2">
