--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -3,12 +3,12 @@
 }
 
 .row::after {
-  content: "";
+  content: '';
   clear: both;
   display: table;
 }
 
-[class*="col-"] {
+[class*='col-'] {
   float: left;
   padding: 10px;
 }
@@ -19,19 +19,19 @@ html {
 
 a {
   color: black;
-  text-decoration:none;
+  text-decoration: none;
 }
 
-a:hover{
+a:hover {
   cursor: pointer;
 }
 
-.footer{
+.footer {
   margin-top: 50px;
   background-color: #579a88;
-  position: fixed; 
-  bottom: 0; 
-  height: auto; 
+  position: fixed;
+  bottom: 0;
+  height: auto;
   width: 99%;
 }
 /* .empty {
@@ -43,43 +43,104 @@ a:hover{
 
 @media only screen and (min-width: 916px) {
   /* For large page: */
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;}
-  .hidden-large {display: none;}
+  .col-1 {
+    width: 8.33%;
+  }
+  .col-2 {
+    width: 16.66%;
+  }
+  .col-3 {
+    width: 25%;
+  }
+  .col-4 {
+    width: 33.33%;
+  }
+  .col-5 {
+    width: 41.66%;
+  }
+  .col-6 {
+    width: 50%;
+  }
+  .col-7 {
+    width: 58.33%;
+  }
+  .col-8 {
+    width: 66.66%;
+  }
+  .col-9 {
+    width: 75%;
+  }
+  .col-10 {
+    width: 83.33%;
+  }
+  .col-11 {
+    width: 91.66%;
+  }
+  .col-12 {
+    width: 100%;
+  }
+  .hidden-large {
+    display: none;
+  }
 }
 @media only screen and (max-width: 916px) {
   /* For small page: */
-  .col-s-1 {width: 8.33%;}
-  .col-s-2 {width: 16.66%;}
-  .col-s-3 {width: 25%;}
-  .col-s-4 {width: 33.33%;}
-  .col-s-5 {width: 41.66%;}
-  .col-s-6 {width: 50%;}
-  .col-s-7 {width: 58.33%;}
-  .col-s-8 {width: 66.66%;}
-  .col-s-9 {width: 75%;}
-  .col-s-10 {width: 83.33%;}
-  .col-s-11 {width: 91.66%;}
-  .col-s-12 {width: 100%;}
-  .hidden-small {display: none;}
+  .col-s-1 {
+    width: 8.33%;
+  }
+  .col-s-2 {
+    width: 16.66%;
+  }
+  .col-s-3 {
+    width: 25%;
+  }
+  .col-s-4 {
+    width: 33.33%;
+  }
+  .col-s-5 {
+    width: 41.66%;
+  }
+  .col-s-6 {
+    width: 50%;
+  }
+  .col-s-7 {
+    width: 58.33%;
+  }
+  .col-s-8 {
+    width: 66.66%;
+  }
+  .col-s-9 {
+    width: 75%;
+  }
+  .col-s-10 {
+    width: 83.33%;
+  }
+  .col-s-11 {
+    width: 91.66%;
+  }
+  .col-s-12 {
+    width: 100%;
+  }
+  .hidden-small {
+    display: none;
+  }
 }
 
 /* info */
-.infotbl {
+.infotbl, .cohortinfotbl {
   border-collapse: collapse;
 }
 
-.infotbl th, td {
+.infotbl tr, .cohortinfotbl tr {
+  border-bottom: 1px solid #ddd;
+}
+
+.infotbl tr:nth-child(even), .cohortinfotbl tr:nth-child(odd) {
+  background-color: #f1f1f1;
+}
+
+.infotbl th, td, .cohortinfotbl th, td {
+  padding-left: 10px;
   padding-right: 15px;
   padding-top: 5px;
   padding-bottom: 5px;
@@ -87,15 +148,20 @@ a:hover{
 
 .infotbl th {
   text-align: left;
-  padding: 2px;
+  background-color: rgb(217, 217, 217);
 }
 
-.infotbl td {
+.cohortinfotbl th {
+  text-align: right;
+}
+
+.infotbl, .cohortinfotbl td {
   font-weight: normal;
 }
 
 /* update */
-.intbl th, td {
+.intbl th,
+td {
   border: none;
   font-weight: normal;
 }
@@ -106,20 +172,23 @@ a:hover{
 }
 
 #updatetable {
-    border-collapse: collapse;
+  border-collapse: collapse;
 }
-  
-#updatetable td, #updatetable th {
+
+#updatetable td,
+#updatetable th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#updatetable tr:nth-child(1){
+#updatetable tr:nth-child(1) {
   background-color: rgb(217, 217, 217) !important;
 }
 
-#updatetable tr:nth-child(odd){background-color: #f2f2f2;}
-  
+#updatetable tr:nth-child(odd) {
+  background-color: #f2f2f2;
+}
+
 #updatetable td {
   padding-top: 12px;
   padding-bottom: 12px;
